--- a/app/templates/watchVideo.html
+++ b/app/templates/watchVideo.html
@@ -67,7 +67,7 @@ $(function() {
 
     const videoQueue = {{ data['items'] | tojson }};
     let currentIndex = 0;
-    let playMode = {{ data.mode | tojson }} || 'loop';
+    let playMode = {{ data.settings.mode | tojson }} || 'loop';
     let isSeeking = false;
 
     // ------------------------------
@@ -82,17 +82,27 @@ $(function() {
 
         select.select2({ placeholder: '動画を選択', allowClear: true, width: '100%' });
 
-        const initialVideoTitle = {{ data.v | tojson }};
+        // settings.vに対応する動画を選択
+        const initialVideo = {{ data.settings.v | tojson }};
         let firstOption = select.find('option:first');
         let firstVideoPath = firstOption.val();
-        if (initialVideoTitle) {
-            const matchOption = select.find('option').filter((i,opt) => $(opt).text() === initialVideoTitle);
+        if (initialVideo) {
+            const matchOption = select.find('option').filter((i,opt) => {
+                return $(opt).text() === initialVideo || videoQueue[i].filename === initialVideo;
+            });
             if (matchOption.length) firstVideoPath = matchOption.val();
         }
+
         select.val(firstVideoPath).trigger('change');
         $('#videoSource').attr('src', firstVideoPath);
         videoPlayer.load();
         document.title = select.find('option:selected').text();
+
+        // 初期URLをhistoryに設定
+        const initIndex = select.prop('selectedIndex');
+        const initFilename = videoQueue[initIndex].filename;
+        const initURL = `http://127.0.0.1:5000/watchVideo?v=${initFilename}`;
+        history.replaceState(null, '', initURL);
     }
 
     // ------------------------------
@@ -134,7 +144,14 @@ $(function() {
             videoPlayer.load();
             videoPlayer.onloadedmetadata = () => videoPlayer.play();
             $('#videoPlayer').show();
-        } else { $('#videoPlayer').hide(); }
+
+            // ブラウザのURLを書き換え
+            const filename = videoQueue[currentIndex].filename;
+            const newURL = `http://127.0.0.1:5000/watchVideo?v=${filename}`;
+            history.replaceState(null, '', newURL);
+        } else { 
+            $('#videoPlayer').hide(); 
+        }
     });
 
     $('#volumeControl').on('input', function() { videoPlayer.volume = $(this).val()/100; });
@@ -187,4 +204,6 @@ $(function() {
     initVideoSelect();
 });
 </script>
+
+    
 {% endblock %}
